examples/test/testpolicy19855.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19855
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key49: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value23
          key0: value22
          key20: value45
      podSelector:
        matchLabels:
          key4: value29
          key44: value5
          key33: value11
